--- a/App/public/css/style.css
+++ b/App/public/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700);
+/*@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700);*/
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
